src/snapshots/soliton__cli__tests__examples_match_snapshots@hello-world.snap
---
source: src/cli.rs
expression: contents
input_file: examples/valid/hello-world
---
hello: "hello world\n"
