src/snapshots/soliton__cli__tests__examples_match_snapshots@invalid-duplicate-media-type-2.snap
---
source: src/cli.rs
expression: contents
input_file: src/examples/invalid-duplicate-media-type-2
---
bad.xml: "Error: Unable to load content. There are multiple content files for route /bad with the same media type (text/xml)."
bad.xml.php: "Error: Unable to load content. There are multiple content files for route /bad with the same media type (text/xml)."
