src/snapshots/soliton__cli__tests__examples_match_snapshots@invalid-single-extension-executable.snap
---
source: src/cli.rs
expression: contents
input_file: src/examples/invalid-single-extension-executable
---
this-file-is-executable: "Error: Unable to load content. Content file name is not supported: The content file 'this-file-is-executable.txt' is executable, but only has one extension ('txt'). Executables must have two extensions: the first indicates the media type of its output, and the second is arbitrary but can be used to indicate the executable type ('.sh', '.exe', '.py', etc)."
