src/snapshots/soliton__cli__tests__examples_match_snapshots@invalid-template-that-is-executable.snap
---
source: src/cli.rs
expression: contents
input_file: src/examples/invalid-template-that-is-executable
---
this-file-is-executable.html.hbs: "Error: Unable to load content. Content file name is not supported: The content file 'this-file-is-executable.html.hbs' appears to be a handlebars file (because it ends in '.hbs'), but it is also executable. It must be one or the other."
