src/snapshots/soliton__cli__tests__examples_match_snapshots@invalid-three-extensions-not-executable.snap
---
source: src/cli.rs
expression: contents
input_file: src/examples/invalid-three-extensions-not-executable
---
this-file-is-not-executable.txt.html.jpg: "Error: Unable to load content. Content file name is not supported: Content file name 'this-file-is-not-executable.txt.html.jpg' has too many extensions."
