src/snapshots/soliton__cli__tests__examples_match_snapshots@multimedia.snap
---
source: src/cli.rs
expression: contents
input_file: src/examples/multimedia
---
dramatic-prairie-dog: binary data with hash 993ffd47041700b
wilhelm-scream: binary data with hash 9eb0b3ab8b7a0069
